GC 手册更新